        PR c++/38877         * tree.c (lvalue_p_1): Allow non-fields in COMPONENT_REF.         * init.c (build_new): Don't call describable_type unless we         have an auto.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@143446 138bc75d-0d04-0410-961f-82ee72b054a4